syntax = "proto3";

option csharp_namespace = "SPHealthSupportSystem_gRPCService.Protos";

package psychologyTheory;

service PsychologyTheoryService {
  rpc GetAll (Empty) returns (PsychologyTheoryList);
  rpc GetById (PsychologyTheoryRequest) returns (PsychologyTheory);
  rpc Add (PsychologyTheory) returns (ActionResult);
  rpc Update (PsychologyTheory) returns (ActionResult);
  rpc Delete (PsychologyTheoryRequest) returns (ActionResult);

}
message ActionResult{
    int32 Status = 1;
    string Message = 2;
    PsychologyTheoryList Data = 3;
}
message PsychologyTheoryRequest{
    int32 Id = 1;
}


message Empty {}

message PsychologyTheory {
     int32 Id = 1;
     string Name = 2;
     string Description = 3; 
     int32 TopicId = 4;
     string Author = 5;
     int32 YearPublished = 6;
     string TheoryType = 7;
     string Principle = 8;
     string Application = 9;
     string RelatedTheory = 10;
     string Criticism = 11;
     string CreatedAt = 12;
     string UpdatedAt = 13;
}

message PsychologyTheoryList {
    repeated PsychologyTheory theories = 1;
}

